--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     },
     "dependencies": {
         "admin-lte": "^3.1.0",
+        "datatables.net": "^1.10.25",
+        "datatables.net-autofill": "^2.3.9",
+        "datatables.net-bs4": "^3.2.2",
+        "datatables.net-dt": "^1.1.0",
+        "datatables.net-responsive": "^2.2.9",
         "font-awesome": "^4.7.0"
     }
 }
